--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }
         console.log(i)*/
 
-        var daysOfTheWeek = [
+        /*var daysOfTheWeek = [
         'Lunes',
         'Martes',
         'Miércoles',
@@ -70,8 +70,9 @@
 
         for (var i = 0; 9 > i > 6; i++) {
             console.log (daysOfTheWeek[i] + diaFinSemana);
-        }
+        }*/
 
+        /*DESAFIO 3*/
         var operacion = prompt("Ingrese la operacion a realizar")
         var primerNumero= prompt("Ingrese primer numero")
         var segundoNumero= prompt("Ingrese segundo numero")
